@@ -64,6 +64,7 @@ extern NSString * MAPref_EmptyTrashNotification;
 extern NSString * MAPref_ShowAppInStatusBar;
 extern NSString * MAPref_ShowStatusBar;
 extern NSString * MAPref_ShowFilterBar;
+extern NSString * MAPref_NewFolderUI;
 
 extern int MA_Default_BackTrackQueueSize;
 extern int MA_Default_RefreshThreads;
