@@ -43,6 +43,7 @@
 	NSImage * refreshProgressImage;
 	BOOL blockSelectionHandler;
 	BOOL canRenameFolders;
+	BOOL useNewFolderUI;
 }
 
 // Public functions
