@@ -234,6 +234,7 @@ static Preferences * _standardPreferences = nil;
 	[defaultValues setObject:boolNo forKey:MAPref_ShowAppInStatusBar];
 	[defaultValues setObject:boolYes forKey:MAPref_ShowStatusBar];
 	[defaultValues setObject:boolYes forKey:MAPref_ShowFilterBar];
+	[defaultValues setObject:boolNo forKey:MAPref_NewFolderUI];
 	[defaultValues setObject:(isPanther ? boolYes : boolNo) forKey:MAPref_ShowScriptsMenu];
 	[defaultValues setObject:boolNo forKey:MAPref_UseMinimumFontSize];
 	[defaultValues setObject:[NSNumber numberWithInt:MA_Filter_All] forKey:MAPref_FilterMode];
